[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "power-price-risk-case"
version = "0.1.0"
description = "Synthetic intraday power price-risk modelling case."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
]

[tool.setuptools.packages.find]
where = ["src"]
